# cleareq

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installer/: ClearEQ.iss
